[package]
name = "addonmanager-cli"
version = "0.2.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
figlet-rs = "0.1.5"
tokio = { version = "1.43.0", features = ["full"] }
addonmanager-core = {path = "../addonmanager-core" }
downloader-core = {path = "../downloader-core", features = ["cli"] }

[target.'cfg(not(unix))'.dependencies]
colored = "3.0.0"

[features]
default = ["demo"]
demo = ["addonmanager-core/demo"]
production = ["addonmanager-core/production"]
